k8s/python-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  namespace: jenkins
  labels:
    app: python-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
      - name: python-app
        image: gcr.io/searce-playground-v1/python-app:latest
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: python-service
  namespace: jenkins
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
